--- a/src/styles/PlayerSmallScreen.scss
+++ b/src/styles/PlayerSmallScreen.scss
@@ -166,7 +166,7 @@
           }
         }
 
-        .wide-projection-item {
+        .award-item {
           text-align: center;
           font-size: 18px;
           font-family: 'Sweet Sans Pro Regular', sans-serif;
@@ -244,7 +244,7 @@
             display: flex;
             justify-content: space-around;
             width: 100%;
-            margin-top: 10px;
+            margin-top: 20px;
 
             .pi-item {
               text-align: center;
@@ -255,7 +255,7 @@
               padding: 10px;
               box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
               width: 50%;
-              margin: 10px 5px;
+              margin: 0 5px;
               min-width: 100px;
 
               .label {
@@ -284,7 +284,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             width: 75px;
             width: 20%;
-            margin: 0 5px;
+            margin: 10px 5px;
             min-width: 10%;
             white-space: pre-wrap;
 
